--- a/netrender/master.html
+++ b/netrender/master.html
@@ -39,7 +39,18 @@
 
   <section id="slaves">
     <h2>Slaves</h2>
-    <table></table>
+    <table id="slavesTable" class="table table-striped" data-ajax="ajaxSlaves">
+      <thead>
+      <tr>
+        <th data-field="name">Name</th>
+        <th data-field="address">Address</th>
+        <th data-field="tags">Tags</th>
+        <th data-field="last_seen">Last Seen</th>
+        <th data-field="stats">Stats</th>
+        <th data-field="type">Job</th>
+      </tr>
+      </thead>
+    </table>
   </section>
 
   <section id="config">
@@ -54,31 +65,75 @@
   <script>
 
     $(document).ready(function(){
-      $("section#jobs table").bootstrapTable();
-
-      function ajaxJobs(params) {
-          // data you need
-          console.log(params.data);
-          // just use setTimeout
-
-          $.ajax({
-          type : 'GET',
-          url : '/html/jobs',
-          dataType : 'json',
-          contentType : 'application/json',
-          success : function(jobs) {
-              params.success({
-                      "rows": jobs,
-                      "total": jobs.length
-                  })
-              console.log(jobs);
-            //updateJobsTable(jobs);
-          }
-        });
-      }
-
-
+      //$("section#jobs table").bootstrapTable();
+      $("#slavesTable").bootstrapTable();
+        console.log("ready...");
+//      $.ajax({
+//        type : 'GET',
+//        url : '/html/slaves',
+//        dataType : 'json',
+//        contentType : 'application/json',
+//         success: function(data) {
+//             //alert('done');
+//             $('#clienti').bootstrapTable({
+//                data: mydata
+//             });
+//         },
+//         error: function(e) {
+//             console.log(e.responseText);
+//         }
+//      });
     });
+
+    function ajaxJobs(params) {
+      // data you need
+      console.log(params.data);
+      // just use setTimeout
+
+      $.ajax({
+        type : 'GET',
+        url : '/html/slaves',
+        dataType : 'json',
+        contentType : 'application/json',
+        success : function(jobs) {
+          params.success({
+            "rows": jobs,
+            "total": jobs.length
+          })
+          console.log(jobs);
+          //updateJobsTable(jobs);
+        },
+        error: function(){
+          console.log('AJAX failed to load jobs');
+        }
+      });
+    }
+
+    function ajaxSlaves(params) {
+      // data you need
+      console.log(params.data);
+      // just use setTimeout
+
+      $.ajax({
+        type : 'GET',
+        url : '/html/slaves',
+        dataType : 'json',
+        contentType : 'application/json',
+        success : function(slaves) {
+          console.log(slaves);
+          params.success({
+            data: slaves,
+          });
+
+          //updateJobsTable(jobs);
+        },
+        error: function(){
+          console.log('AJAX failed to load slaves');
+        }
+      });
+    }
+
+
   </script>
 
 </body>
