action btns onclick (in progress)

--- a/netrender/master.html
+++ b/netrender/master.html
@@ -13,9 +13,7 @@
 <div class="container-fluid">
 
   <section id="jobs">
-    <h2>Jobs</h2>
-
-    <!--<div id="toolbar"></div>-->
+    <h3>Jobs</h3>
     <table id="jobsTable"
            data-ajax="ajaxJobs"
            data-id-field="id"
@@ -31,7 +29,7 @@
       <thead>
 
       <tr>
-        <th data-field="action"></th>
+        <th data-field="actions">Actions</th>
         <th data-field="id">ID</th>
         <th data-field="name">Name</th>
         <th data-field="category">Category</th>
@@ -53,7 +51,7 @@
   </section>
 
   <section id="slaves">
-    <h2>Slaves</h2>
+    <h3>Slaves</h3>
     <table id="slavesTable" class="table table-striped" data-ajax="ajaxSlaves">
       <thead>
       <tr>
@@ -69,7 +67,7 @@
   </section>
 
   <section id="config">
-    <h2>Configuration</h2>
+    <h3>Configuration</h3>
   </section>
 
   <footer>
