working on dates...

--- a/netrender/master.html
+++ b/netrender/master.html
@@ -48,6 +48,8 @@
         <th data-field="error">Error</th>
         <th data-field="priority">Priority</th>
         <th data-field="exception">Exception</th>
+        <th data-field="started">Started</th>
+        <th data-field="finished">Finished</th>
       </tr>
       </thead>
     </table>
