$.ajax -> #.get & $.post

--- a/netrender/master.html
+++ b/netrender/master.html
@@ -97,8 +97,9 @@
         Content
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-default btn-no" data-dismiss="modal">No</button>
         <button type="button" class="btn btn-primary btn-yes" data-dismiss="modal">Yes</button>
+        <button type="button" class="btn btn-default btn-no" data-dismiss="modal">No</button>
+        <button type="button" class="btn btn-default btn-cancel" data-dismiss="modal">Cancel</button>
       </div>
     </div>
   </div>
