Job Chunk spinners and actions

--- a/netrender/master.html
+++ b/netrender/master.html
@@ -39,7 +39,7 @@
         <th data-field="category" data-visible="false">Category</th>
         <th data-field="tags">Tags</th>
         <th data-field="type" data-visible="false">Type</th>
-        <th data-field="chunks" data-visible="false">Chunks</th>
+        <th data-field="chunks" data-visible="false" data-formatter="chunksFormatter" data-align="right">Chunks</th>
         <th data-field="priority" data-visible="false">Priority</th>
         <th data-field="usage" data-formatter="jobUsageFormatter">Usage</th>
         <th data-field="wait">Wait</th>
@@ -48,7 +48,6 @@
         <th data-field="done">Done</th>
         <th data-field="dispatched">Sent</th>
         <th data-field="error">Error</th>
-        <th data-field="priority">Priority</th>
         <th data-field="exception">Exception</th>
         <th data-field="started" data-formatter="jobStartedFormatter">Started</th>
         <th data-field="finished" data-formatter="jobFinishedFormatter">Finished</th>
